--- a/games/tictactoe/Cargo.toml
+++ b/games/tictactoe/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 extism-pdk = "0.1.0"
 serde = "1.0.148"
 serde_json = "1.0.89"
+tera = { version = "1", default-features = false }
 
 [lib]
 crate_type = ["cdylib"]
