--- a/games/tictactoe/Cargo.toml
+++ b/games/tictactoe/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+derive_builder = "0.12.0"
 extism-pdk = "0.1.0"
 serde = "1.0.148"
 serde_json = "1.0.89"
