--- a/fly.toml
+++ b/fly.toml
@@ -16,6 +16,10 @@ processes = []
   allowed_public_ports = []
   auto_rollback = true
 
+[mounts]
+  source="game_box_data"
+  destination="/data"
+
 [[services]]
   http_checks = []
   internal_port = 8080
