--- a/games/tictactoe/Cargo.toml
+++ b/games/tictactoe/Cargo.toml
@@ -11,6 +11,7 @@ extism-pdk = "0.1.0"
 serde = "1.0.148"
 serde_json = "1.0.89"
 tera = { version = "1", default-features = false }
+anyhow = { version = "1.0", default-features = false }
 
 [lib]
 crate_type = ["cdylib"]
