--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Compile
         id: compile
         if: steps.build_cache.outputs['cache-hit'] != 'true'
-        run: mix compile --warnings-as-errors
+        run: mix compile
       
       - name: Formatting
         run: mix format --check-formatted
@@ -91,4 +91,4 @@ jobs:
 
       - name: Tests
         id: tests
-        run: mix test --no-compile --no-deps-check --warnings-as-errors
+        run: mix test --no-compile --no-deps-check
